--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "axios": "^1.6.7",
     "electron-squirrel-startup": "^1.0.0",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
