--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.6.7",
     "formik": "^2.4.6",
     "framer-motion": "^11.0.5",
@@ -19,7 +20,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.22.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
